--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,12 +16,15 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.11' 
+        
+    - name: Install coverage
+      run: python -m pip install coverage
     
     - name: Install pytest
       run: python -m pip install pytest
       
-    - name: Install dependencies
-      run: pip install click
+    - name: Install click
+      run: python -m pip install click
 
     - name: Run tests
       run: python -m pytest tests
