--- a/.github/workflows/ci_coverage.yml
+++ b/.github/workflows/ci_coverage.yml
@@ -1,4 +1,4 @@
-name: CI
+name: coverage
 on:
   push:
     branches:
@@ -26,17 +26,8 @@ jobs:
     - name: Install click
       run: python -m pip install click
 
-    - name: Run tests
-      run: python -m pytest tests
-
     - name: Test coverage
       run: python -m coverage run -m pytest tests
 
     - name: Generate coverage report
       run: coverage html -d coverage_report
-
-    - name: Upload coverage report
-      uses: actions/upload-artifact@v2
-      with:
-        name: coverage-report
-        path: coverage_report
