--- a/.github/workflows/ci_coverage.yml
+++ b/.github/workflows/ci_coverage.yml
@@ -25,9 +25,37 @@ jobs:
       
     - name: Install click
       run: python -m pip install click
+      
 
     - name: Test coverage
-      run: python -m coverage run -m pytest tests
+      run: |
+        python -m coverage run -m pytest testss
+        coverage_percentage=$(coverage report | awk 'END {print $4}')
+        echo "::set-output name=coverage_percentage::$coverage_percentage"
+      shell: bash
 
     - name: Generate coverage report
       run: coverage html -d coverage_report
+      continue-on-error: true
+
+    - name: Set Coverage Percentage
+      id: set_coverage
+      run: echo "coverage_percentage=${{ steps.build.outputs.coverage_percentage }}" >> $GITHUB_ENV
+
+  coverage_badge:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Create coverage badge
+      run: |
+        coverage_percentage=${{ env.coverage_percentage }}
+        if [[ $coverage_percentage == "100%" ]]; then
+          badge_message="coverage-100%25-brightgreen"
+        else
+          badge_message="coverage-$coverage_percentage-yellow"
+        fi
+        echo "[![coverage](https://img.shields.io/badge/$badge_message)](https://github.com/kradt/aioskd/actions/workflows/ci_coverage.yml)" >> README.md
+      shell: bash
