add auto coverage

--- a/.github/workflows/ci_coverage.yml
+++ b/.github/workflows/ci_coverage.yml
@@ -26,7 +26,6 @@ jobs:
     - name: Install click
       run: python -m pip install click
 
-
     - name: Test coverage
       run: |
         python -m coverage run -m pytest tests
@@ -40,7 +39,7 @@ jobs:
 
     - name: Set Coverage Percentage 
       id: set_coverage
-      run: echo "coverage_percentage=${{ steps.build.outputs.coverage_percentage }}" >> $GITHUB_ENV
+      run: echo "COVERAGE_PERCENTAGE=${{ steps.build.outputs.coverage_percentage }}" >> $GITHUB_ENV
 
   coverage_badge:
     needs: build
@@ -51,7 +50,7 @@ jobs:
 
     - name: Create coverage badge
       run: |
-        coverage_percentage=${{ env.coverage_percentage }}
+        coverage_percentage=${{ env.COVERAGE_PERCENTAGE }}
         if [[ $coverage_percentage == "100%" ]]; then
           badge_message="coverage-100%25-brightgreen"
         else
