--- a/.github/workflows/ci_coverage.yml
+++ b/.github/workflows/ci_coverage.yml
@@ -37,6 +37,11 @@ jobs:
       run: coverage html -d coverage_report
       continue-on-error: true
 
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
   coverage_badge:
     needs: build
     runs-on: ubuntu-latest
