--- a/.github/workflows/ci_coverage.yml
+++ b/.github/workflows/ci_coverage.yml
@@ -27,35 +27,13 @@ jobs:
       run: python -m pip install click
 
     - name: Test coverage
-      run: |
-        python -m coverage run --source=aioskd -m pytest tests
-        coverage_percentage=$(python -m coverage report | awk 'END {print $4}')
-        echo "COVERAGE_PERCENTAGE=$coverage_percentage" >> $GITHUB_ENV
+      run: python -m coverage run --source=aioskd -m pytest tests
+
       shell: bash
 
     - name: Generate coverage report
-      run: coverage html -d coverage_report
+      run: coverage json -d coverage_report
       continue-on-error: true
 
     - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v3
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
-  coverage_badge:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2.4.2
-
-    - name: Create coverage badge
-      run: |
-        coverage_percentage=${{ env.COVERAGE_PERCENTAGE }}
-        if [[ $coverage_percentage == "100%" ]]; then
-          badge_message="coverage-100%25-brightgreen"
-        else
-          badge_message="coverage-$coverage_percentage-yellow"
-        fi
-        echo "[![coverage](https://img.shields.io/badge/$badge_message)](https://github.com/kradt/aioskd/actions/workflows/ci_coverage.yml)" >> README.md
-      shell: bash
+      uses: codecov/codecov-action@v3 
