--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -16,12 +16,16 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.11' 
+
         
     - name: Install coverage
       run: python -m pip install coverage
     
     - name: Install pytest
       run: python -m pip install pytest
+      
+    - name: Install pytest-async
+      run: python -m pip install pytest-asyncio
       
     - name: Install click
       run: python -m pip install click
